--- a/public/now.json
+++ b/public/now.json
@@ -1,7 +1,7 @@
 {
 	"version": 2,
-	"alias": "storytime-generator",
-	"name": "storytime-generator",
+	"alias": "penseed",
+	"name": "penseed",
 	"routes": [
 		{
 		  "src": "^/static/(.*)",
