--- a/public/now.json
+++ b/public/now.json
@@ -1,7 +1,7 @@
 {
 	"version": 2,
-	"alias": "penseed",
-	"name": "penseed",
+	"alias": "calliope",
+	"name": "calliope",
 	"routes": [
 		{
 		  "src": "^/static/(.*)",
