--- a/package.json
+++ b/package.json
@@ -18,7 +18,7 @@
     "test": "react-scripts test",
     "eject": "react-scripts eject",
     "predeploy": "npm run build",
-    "deploy": "now ./build",
+    "deploy": "now --prod ./build",
     "postdeploy": "now alias -A ./build/now.json"
   },
   "eslintConfig": {
